--- a/posts/猜大小.md
+++ b/posts/猜大小.md
@@ -1,3 +1,12 @@
+
+---
+title:
+date: '2012-08-13'
+description:
+categories:
+---
+
+
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
                "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
