--- a/posts/thinks-that-i-want-to-know.org
+++ b/posts/thinks-that-i-want-to-know.org
@@ -27,3 +27,31 @@ k(x,z) &= e^{- \chi(x,z)^{2}}\\
 \end{split}
 \end{equation}
 
+*solved*
+One Solution:
+\begin{equation} 
+\begin{split}
+\chi(x,z) = &= \sum_{i}^{d} \frac{(x_{i} - z_{i})^{2}}{x_{i} + z_{i}}\\
+&= \sum_{i}^{d} x_{i} + z_{i} - 4*\frac{x_{i}*z_{i}}{x_{i} + z_{i}} 
+\end{split}
+\end{equation}
+
+let k(x,z) = $\frac{2xz}{x + z}$, $\Delta = log(z) - log(x)$
+\begin{equation} 
+\begin{split}
+k(x,z) &= \sqrt{xz} \frac{2}{\sqrt{\frac{x}{z}} + \sqrt{\frac{z}{x}}} \\
+&=\sqrt{xz}sech(\frac{\Delta}{2})
+\end{split}
+\end{equation}
+
+The Fourier transform of sech(x) is $\pi sech(\pi \omega)$(non-unitary, angular frequency).
+Using the inverse Fourier transform, 
+
+\begin{equation} 
+\begin{split}
+k(x,z) &= \sqrt{xz} \int_{-\infty}^{\infty} e^{i\omega}(log(x) - log(z))sech(\pi \omega) d \omega
+&= \int_{-\infty}^{\infty} \Phi_{\omega}(x) * \Phi_{\omega}(z) d \omega
+\end{split}
+\end{equation}
+
+
