--- a/orgfile/Films.org
+++ b/orgfile/Films.org
@@ -4,3 +4,4 @@
 
 * Machine Learning Study
 http://techtalks.tv/talks/57646/ [[http://www.cs.nyu.edu/~yann/talks/lecun-20120629-icml.pdf][pdf]]
+ [[http://techtv.mit.edu/collections/mit150:1967][Brains, Minds and Machines]]
