--- a/orgfile/Films.org
+++ b/orgfile/Films.org
@@ -3,7 +3,7 @@
 * Entertainment
 
 * Machine Learning Study
-| Video                            | Files |
-|----------------------------------+-------|
-| http://techtalks.tv/talks/57646/ | [[http://www.cs.nyu.edu/~yann/talks/lecun-20120629-icml.pdf][pdf]]   |
-| [[http://techtv.mit.edu/collections/mit150:1967][Brains, Minds and Machines]]       |       |
+| title | Video                            | Files |
+|-------+----------------------------------+-------|
+|       | http://techtalks.tv/talks/57646/ | [[http://www.cs.nyu.edu/~yann/talks/lecun-20120629-icml.pdf][pdf]]   |
+|       | [[http://techtv.mit.edu/collections/mit150:1967][Brains, Minds and Machines]]       |       |
