--- a/orgfile/pages/resource.org
+++ b/orgfile/pages/resource.org
@@ -9,6 +9,9 @@
 |       | http://techtalks.tv/talks/57646/ | [[http://www.cs.nyu.edu/~yann/talks/lecun-20120629-icml.pdf][pdf]]   |
 |       | [[http://techtv.mit.edu/collections/mit150:1967][Brains, Minds and Machines]]       |       |
 
+* Programming
+| title | Type | File |
+| Clean | Book | [[http://www.tud.ttu.ee/material/kallik/JOOP/Clean_Code_-_A_Handbook_of_Agile_Software_Craftsmanship.pdf][pdf]] |
 * Math
 | title              | file |
 |--------------------+------|
