--- a/orgfile/pages/resource.org
+++ b/orgfile/pages/resource.org
@@ -10,8 +10,9 @@
 |       | [[http://techtv.mit.edu/collections/mit150:1967][Brains, Minds and Machines]]       |       |
 
 * Programming
-| title | Type | File |
-| Clean | Book | [[http://www.tud.ttu.ee/material/kallik/JOOP/Clean_Code_-_A_Handbook_of_Agile_Software_Craftsmanship.pdf][pdf]] |
+| title                        | Type | File |
+| Clean code                   | Book | [[http://www.tud.ttu.ee/material/kallik/JOOP/Clean_Code_-_A_Handbook_of_Agile_Software_Craftsmanship.pdf][pdf]]  |
+| [[http://www.amazon.com/dp/1449390544/?tag=stackoverfl08-20][Head First HTML5 Programming]] | Book |      |
 * Math
 | title              | file |
 |--------------------+------|
