--- a/orgfile/pages/resource.org
+++ b/orgfile/pages/resource.org
@@ -14,9 +14,11 @@
 | Clean code                   | Book | [[http://www.tud.ttu.ee/material/kallik/JOOP/Clean_Code_-_A_Handbook_of_Agile_Software_Craftsmanship.pdf][pdf]]  |
 | [[http://www.amazon.com/dp/1449390544/?tag=stackoverfl08-20][Head First HTML5 Programming]] | Book |      |
 * Math
-| title              | file |
-|--------------------+------|
-| SPECIAL RELATIVITY | [[http://terrytao.files.wordpress.com/2012/12/relativistic1.pdf][pdf]]  |
+| title               | file |
+|---------------------+------|
+| SPECIAL RELATIVITY  | [[http://terrytao.files.wordpress.com/2012/12/relativistic1.pdf][pdf]]  |
+| [[http://www.amazon.com/Proofs-BOOK-Martin-Aigner/dp/3642008550][Proof from The book]] | [[http://www.iecn.u-nancy.fr/~chassain/djvu/Proofs-from-the-Book-2004.pdf][pdf]] |
+
 * System
 ** paper
 | title                                                               | File |
